# rmviso-003

task3/: CMakeLists.txt  main.cpp
task3/include/: windmill.hpp
task3/src/: windmill.cpp
